2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man9/queue.9.man
	* include/sys/streams/stream.h: mark stream head queues QSHEAD
	* include/sys/streams/strsubr.h: remove strwsrv
	* src/drivers/clone.c: remove strwsrv
	* src/drivers/fifo.c: remove strwsrv
	* src/drivers/pipe.c: remove strwsrv
	* src/drivers/sfx.c: remove strwsrv
	* src/kernel/strsched.c: mark stream head queues QSHEAD
	* src/kernel/strutil.c: directly backenable write side of stream head
	* src/modules/sth.c: remove strwsrv

	* tests/testsuite-clone.at: testsuite factoring
	* tests/testsuite-connld.at: testsuite factoring
	* tests/testsuite-echo.at: testsuite factoring
	* tests/testsuite-fifo.at: testsuite factoring
	* tests/testsuite-log.at: testsuite factoring
	* tests/testsuite-loop.at: testsuite factoring
	* tests/testsuite-mux.at: testsuite factoring
	* tests/testsuite-nsdev.at: testsuite factoring
	* tests/testsuite-nuls.at: testsuite factoring
	* tests/testsuite-pipe.at: testsuite factoring
	* tests/testsuite-pipemod.at: testsuite factoring
	* tests/testsuite-sad.at: testsuite factoring
	* tests/testsuite-sc.at: testsuite factoring
	* tests/testsuite-streams.at: testsuite factoring
	* tests/testsuite.at: testsuite factoring

2007-04-16  Brian Bidulock  <bidulock@openss7.org>

	* src/util/init/strace: correct for SuSE
	* src/util/init/strerr: correct for SuSE

	* tests/testsuite-clone.at: factor common functions
	* tests/testsuite-connld.at: factor common functions
	* tests/testsuite-echo.at: factor common functions
	* tests/testsuite-fifo.at: factor common functions
	* tests/testsuite-log.at: factor common functions
	* tests/testsuite-loop.at: factor common functions
	* tests/testsuite-mux.at: factor common functions
	* tests/testsuite-nsdev.at: factor common functions
	* tests/testsuite-nuls.at: factor common functions
	* tests/testsuite-pipe.at: factor common functions
	* tests/testsuite-pipemod.at: factor common functions
	* tests/testsuite-sad.at: factor common functions